syntax = "proto3";

import "google/protobuf/any.proto";

message Item {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string gender = 5;
    uint32 age = 6;
    string phone = 7;
    string country = 8;
    google.protobuf.Any state = 9;
    string city = 10;
    string street = 11;
    string house = 12;
}

message GetAllItems {
    repeated Item items = 1;
}