syntax = "proto3";

message HealthMessage {
    string status = 1;
    string health = 2;
}